# tmcm-lib-py

./: Pipfile  README.md  setup.cfg  setup.py
tests/: environment.py  test_module.py  test_module_tmcm_3110.py  test_motor.py  test_motor_union.py
tmcm_lib/: __init__.py  direction.py  exceptions.py  module.py  module_tmcm_3110.py  motor.py  motor_union.py  port.py  switch.py
tmcm_lib/module_3110/: motor.py
tmcm_lib/tmcm_3110/: module.py  motor.py
