[metadata]
name = TMCM-Lib
description = Trinamic Motion Control Module Library for Python
author = Florian Lapp
author_email = e5abed0c@gmail.com
license = MIT
license_file = LICENSE.txt
keywords = Trinamic, TMCM, TMCL, Stepper-Motor-Control
url = https://github.com/florian-lapp/tmcm-lib-py
long_description = file: README.md
long_description_content_type = text/markdown
version = attr: tmcm_lib.VERSION
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Typing :: Typed

[options]
packages = tmcm_lib, tmcm_lib.module_3110
install_requires = pyserial